# inflo

./: CMakeLists.txt
cfg/: parameter.toml
include/: inflo.hpp
src/: main.cpp
